[gd_scene load_steps=8 format=2]

[ext_resource path="res://prototype/scenes/GuiSettings.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GuiSettings" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 640, 360 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.027451, 0.0941176, 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 600.0
margin_bottom = 292.0
custom_constants/vseparation = 12
columns = 2

[node name="ModeLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Mode"

[node name="ModeOptionButton" type="OptionButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_left = 472.0
margin_right = 568.0
margin_bottom = 20.0
size_flags_horizontal = 10
custom_constants/arrow_margin = 3
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_top = 41.0
margin_right = 68.0
margin_bottom = 55.0
text = "VSync"

[node name="VSyncCheckButton" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_left = 504.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 64.0
size_flags_horizontal = 10
custom_constants/check_vadjust = 0
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="FpsLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_top = 85.0
margin_right = 68.0
margin_bottom = 99.0
text = "Show FPS"

[node name="FpsCheckButton" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_left = 504.0
margin_top = 76.0
margin_right = 568.0
margin_bottom = 108.0
size_flags_horizontal = 10
custom_constants/check_vadjust = 0
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="BrightnessLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_top = 121.0
margin_right = 68.0
margin_bottom = 135.0
text = "Brightness"

[node name="BrightnessHSlider" type="HSlider" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_left = 312.0
margin_top = 120.0
margin_right = 568.0
margin_bottom = 136.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 10

[node name="Audio" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 600.0
margin_bottom = 292.0
custom_constants/vseparation = 12
columns = 2

[node name="MasterLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "Master Volume"

[node name="MasterHSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 312.0
margin_right = 568.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 10

[node name="MusicLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 29.0
margin_right = 97.0
margin_bottom = 43.0
text = "Music Volume"

[node name="MusicHSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 312.0
margin_top = 28.0
margin_right = 568.0
margin_bottom = 44.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 10

[node name="SfxLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 57.0
margin_right = 97.0
margin_bottom = 71.0
text = "SFX Volume"

[node name="SfxHSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 312.0
margin_top = 56.0
margin_right = 568.0
margin_bottom = 72.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 10
